update css file

--- a/index.html
+++ b/index.html
@@ -10,35 +10,37 @@
     <main>
         <h1>Project: Library</h1>
         <div>
+<!-- start of input container -->
             <form action="#">
-                <div>
-                    <div>
+                <div class="input-container">
+                    <div class="input-name">
                         <h3>Name</h3>
                         <input type="text">
                     </div>
-                    <div>
+                    <div class="input-author">
                         <h3>Author</h3>
                         <input type="text">
                     </div>
-                    <div>
+                    <div class="input-pages">
                         <h3>Pages</h3>
                         <input type="text">
                     </div>
-                    <div>
+                    <div class="input-description">
                         <h3>Description</h3>
                         <input type="text">
                     </div>
-                    <div>
+                    <div class="input-genre">
                         <h3>Genre</h3>
                         <input type="text">
                     </div>
-                    <div>
+                    <div class="input-status">
                         <h3>Status</h3>
                         <input type="text">
                     </div>
                 </div>
                 <button>ADD</button>
             </form>
+<!-- end of input container -->
         </div>
         <div>
             <div>
