finish the front end

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Project: Library</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <main>
@@ -38,24 +42,22 @@
                         <input type="text">
                     </div>
                 </div>
-                <button>ADD</button>
+                <button class="button-1">ADD</button>
             </form>
 <!-- end of input container -->
         </div>
         <div>
-            <div>
-                <table>
-                    <tr>
-                        <th></th>
-                        <th>Name</th>
-                        <th>Author</th>
-                        <th>Genre</th>
-                        <th>Pages</th>
-                        <th>Status</th>
-                        <th></th>
-                    </tr>
-                </table>
-            </div>
+            <table>
+                <tr class="table-head">
+                    <th style="width: 5%;"></th>
+                    <th style="width: 23.5%;">Name</th>
+                    <th style="width: 23.5%;">Author</th>
+                    <th style="width: 12%;">Genre</th>
+                    <th style="width: 12%;">Pages</th>
+                    <th style="width: 12%;">Status</th>
+                    <th style="width: 12%;"></th>
+                </tr>
+            </table>
         </div>
     </main>
 </body>
