--- a/index.html
+++ b/index.html
@@ -17,32 +17,28 @@
 <!-- start of input container -->
             <form action="#">
                 <div class="input-container">
-                    <div class="input-name">
+                    <div class="name-container">
                         <h3>Name</h3>
-                        <input type="text">
+                        <input id="input-name" type="text">
                     </div>
-                    <div class="input-author">
+                    <div class="author-container">
                         <h3>Author</h3>
-                        <input type="text">
+                        <input id="input-author" type="text">
                     </div>
-                    <div class="input-pages">
+                    <div class="pages-container">
                         <h3>Pages</h3>
-                        <input type="text">
+                        <input id="input-pages" type="text">
                     </div>
-                    <div class="input-description">
-                        <h3>Description</h3>
-                        <input type="text">
-                    </div>
-                    <div class="input-genre">
+                    <div class="genre-container">
                         <h3>Genre</h3>
-                        <input type="text">
+                        <input id="input-genre" type="text">
                     </div>
-                    <div class="input-status">
+                    <div class="status-container">
                         <h3>Status</h3>
-                        <input type="text">
+                        <input id="input-status" type="text">
                     </div>
                 </div>
-                <button class="button-1">ADD</button>
+                <button type="submit" id="add-button" class="add-button">ADD</button>
             </form>
 <!-- end of input container -->
         </div>
